--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <nav>
+        <h3>Writer's Block</h3>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'accounts:logout' %}"><button>Logout</button></a>
+        {% else %}
+            <a href="{% url 'accounts:login' %}"><button>Login</button></a>
+        {% endif %}
+    </nav>
     {% block content %}
-    
+
     {% endblock content %}
 </body>
 </html>
