--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -4,7 +4,8 @@
 <p>Published on {{ post.pub_date }}</p>
 <h3>{{ post.title }}</h3>
 <p>{{ post.content }}</p>
-<a href="{% url 'blog:update' post.pk %}" type="button">Edit</a>
-<a href="{% url 'blog:delete' post.pk %}" type="button">Delete</a>
-
+{% if request.user.is_authenticated %}
+<a href="{% url 'blog:update' post.pk %}"><button>Edit</button></a>
+<a href="{% url 'blog:delete' post.pk %}"><button>Delete</button></a>
+{% endif %}
 {% endblock content %}
