--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<h2>{{ post.title }}</h2>
 <p>Published on {{ post.pub_date }}</p>
-<h3>{{ post.title }}</h3>
-<p>{{ post.content }}</p>
+<p>by {{ post.author }}</p>
 {% if request.user.is_authenticated %}
 <a href="{% url 'blog:update' post.pk %}"><button>Edit</button></a>
 <a href="{% url 'blog:delete' post.pk %}"><button>Delete</button></a>
 {% endif %}
+<p>{{ post.content }}</p>
+<h4>Comments:</h4>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+</form>
+{% for comment in comments %}
+<h5>{{ comment.name }}</h5>
+<p>{{ comment.content }}</p>
+{% endfor %}
 {% endblock content %}
