--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if request.user.is_authenticated %}
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to logout?</p>
-    <button type="submit">Logout</button>
-</form>
-{% else %}
-<p>You're not logged in. <a href="{% url 'accounts:login' %}">Login</a></p>
-{% endif %}
+<div class="container">
+    {% if request.user.is_authenticated %}
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to logout?</p>
+        <button type="submit">Logout</button>
+    </form>
+    {% else %}
+    <p>You're not logged in. <a href="{% url 'accounts:login' %}">Login</a></p>
+    {% endif %}
+</div>
 {% endblock content %}
