--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>Document</title>
 </head>
-
 <body>
-    <nav>
-        <h3>Writer's Block</h3>
-        {% if request.user.is_authenticated %}
-            <a href="{% url 'accounts:logout' %}"><button>Logout</button></a>
-        {% else %}
-            <a href="{% url 'accounts:login' %}"><button>Login</button></a>
-        {% endif %}
-    </nav>
+    <div class="navbar">
+        <a class="navbar-logo" href="{% url 'blog:index' %}">Writer's Block</a>
+        <ul>
+            <li class="navbar-left"><a href="{% url 'blog:index' %}">Home</a></li>
+            <li class="navbar-left"><a href="#">About</a></li>
+            {% if request.user.is_authenticated %}
+            <li class="navbar-right"><a href="{% url 'accounts:logout' %}">Logout</a></li>
+            {% else %}
+            <li class="navbar-right"><a href="{% url 'accounts:register' %}">Register</a></li>
+            <li class="navbar-right"><a href="{% url 'accounts:login' %}">Login</a></li>
+            {% endif %}
+        </ul>
+        </div>
+    </div>
     {% block content %}
 
     {% endblock content %}
 </body>
 </html>
+
+
+<!-- 
+
+<div class="navbar">
+    <a class="navbar-logo" href="#">Writer's Block</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <div class="navbar-right">
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'accounts:logout' %}">Logout</a>
+        {% else %}
+        <a href="{% url 'accounts:register' %}">Register</a>
+        <a href="{% url 'accounts:login' %}">Login</a>
+        {% endif %}
+    </div>
+</div> -->
