Slugs, regex urls

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -5,7 +5,7 @@
     <img src="images/blog-background.jpeg" alt="">
     {% for object in object_list %}
     <div class="preview-box">
-        <h2><a class="wrap" href="{% url 'blog:detail' object.pk %}">{{ object.title }}</a></h2>
+        <h2><a class="wrap" href="{% url 'blog:detail' object.slug %}">{{ object.title }}</a></h2>
         <h4 class="truncate">{{ object.content}}</h4>
     </div>
     {% endfor %}
