--- a/templates/blog/delete.html
+++ b/templates/blog/delete.html
@@ -5,5 +5,5 @@
 {% csrf_token %}
     <button type="submit">Yes</button>
 </form>
-<a href="{% url 'blog:detail' object.pk %}"><button>No</button></a>
+<a href="{% url 'blog:detail' object.slug %}"><button>No</button></a>
 {% endblock content %}
