--- a/templates/base.html
+++ b/templates/base.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+    {% endblock head %}
 </head>
 <body>
-    <div class="navbar">
-        <a class="navbar-logo" href="{% url 'blog:index' %}">Writer's Block</a>
-        <ul>
-            <li class="navbar-left"><a href="{% url 'blog:index' %}">Home</a></li>
-            <li class="navbar-left"><a href="#">About</a></li>
-            {% if request.user.is_authenticated %}
-            <li class="navbar-right"><a href="{% url 'accounts:logout' %}">Logout</a></li>
-            {% else %}
-            <li class="navbar-right"><a href="{% url 'accounts:register' %}">Register</a></li>
-            <li class="navbar-right"><a href="{% url 'accounts:login' %}">Login</a></li>
-            {% endif %}
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'blog:index' %}">Writer's Block</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" href="{% url 'blog:index' %}">Home</a>
+                    <a class="nav-link" href="#">About</a>
+                </div>
+                <div class="navbar-nav ms-auto">
+                    {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+                    {% else %}
+                    <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-    </div>
+    </nav>
     {% block content %}
 
     {% endblock content %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
-
-
-<!-- 
-
-<div class="navbar">
-    <a class="navbar-logo" href="#">Writer's Block</a>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <div class="navbar-right">
-        {% if request.user.is_authenticated %}
-        <a href="{% url 'accounts:logout' %}">Logout</a>
-        {% else %}
-        <a href="{% url 'accounts:register' %}">Register</a>
-        <a href="{% url 'accounts:login' %}">Login</a>
-        {% endif %}
-    </div>
-</div> -->
