--- a/templates/blog/create-update.html
+++ b/templates/blog/create-update.html
@@ -1,12 +1,34 @@
 {% extends 'base.html' %}
+{% block head %}
+{{ form.media }}
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<title>Document</title>
+{% endblock head %}
+
 {% block content %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    {% if not object %}
-    <button type="submit">Create</button>
-    {% else %}
-    <button type="submit">Save changes</button>
-    {% endif %}
-</form>
+<div class="container">
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-success mb-2" type="submit">
+            {% if not object %}
+            Create
+            {% else %}
+            Save changes
+            {% endif %}
+        </button>
+    </form>
+    <a href="{% url 'blog:delete' object.pk %}" class="btn btn-danger mb-5">Delete post</a>
+    
+</div>
 {% endblock content %}
+
+<!-- {% if not object %}
+<button class="btn btn-primary mb-5" type="submit">Create</button>
+{% else %}
+<button class="btn btn-primary mb-5" type="submit">Save changes</button>
+{% endif %} -->
