--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,12 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if not request.user.is_authenticated %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
-{% else %}
-<p>You're already logged in. <a href="{% url 'accounts:logout' %}">Logout</a></p>
-{% endif %}
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col">
+        </div>
+        <div class="col">
+            {% if not request.user.is_authenticated %}
+            <form method="POST">
+                {% csrf_token %}
+                <label class="form-label" for="id_username">Username:</label>
+                <input class="form-control mb-2" type="text" name="username" autofocus autocapitalize="none"
+                    autocomplete="username" maxlength="150" required id="id_username">
+
+                <label class="form-label" for="id_password">Password:</label>
+                <input class="form-control mb-2" type="password" name="password" autocomplete="current-password" required
+                    id="id_password">
+
+                <button class="btn btn-success" type="submit">Login</button>
+            </form>
+            {% else %}
+            <p>You're already logged in. <a href="{% url 'accounts:logout' %}">Logout</a></p>
+            {% endif %}
+        </div>
+        <div class="col">
+        </div>
+    </div>
+</div>
 {% endblock content %}
+<!-- {{ form.as_p }} -->
