--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,14 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    {% if request.user.is_authenticated %}
-    <form method="POST">
-        {% csrf_token %}
-        <p>Are you sure you want to logout?</p>
-        <button type="submit">Logout</button>
-    </form>
-    {% else %}
-    <p>You're not logged in. <a href="{% url 'accounts:login' %}">Login</a></p>
-    {% endif %}
+    <div class="row align-items-center">
+        <div class="col">
+        </div>
+        <div class="col">
+            {% if request.user.is_authenticated %}
+            <form method="POST">
+                {% csrf_token %}
+                <p>Are you sure you want to logout?</p>
+                <button class="btn btn-warning" type="submit">Logout</button>
+            </form>
+            {% else %}
+            <p>You're not logged in. <a href="{% url 'accounts:login' %}">Login</a></p>
+            {% endif %}
+        </div>
+        <div class="col">
+        </div>
+    </div>
 </div>
 {% endblock content %}
