--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,12 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if not request.user.is_authenticated %}
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-</form>
-{% else %}
-<p>You already have an account. <a href="{% url 'accounts:login' %}">Login</a></p>
-{% endif %}
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col">
+        </div>
+        <div class="col">
+            {% if not request.user.is_authenticated %}
+            <form method="POST">
+                {% csrf_token %}
+                <label class="form-label" for="id_username">Username:</label>
+                <input class="form-control mb-2" type="text" name="username" maxlength="150" autocapitalize="none"
+                    autocomplete="username" autofocus required id="id_username">
+
+                <label class="form-label" for="id_password1">Password:</label>
+                <input class="form-control mb-2" type="password" name="password1" autocomplete="new-password" required
+                    id="id_password1">
+
+                <label class="form-label" for="id_password2">Password confirmation:</label>
+                <input class="form-control mb-2" type="password" name="password2" autocomplete="new-password" required
+                    id="id_password2">
+
+                <button class="btn btn-success" type="submit">Register</button>
+            </form>
+            {% else %}
+            <p>You already have an account. <a href="{% url 'accounts:login' %}">Login</a></p>
+            {% endif %}
+        </div>
+        <div class="col">
+        </div>
+    </div>
+</div>
 {% endblock content %}
