--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
+    <div class="row align-items-center">
         <div class="col">
             <h5>left col</h5>
         </div>
@@ -11,7 +11,6 @@
         <div class="card mt-2 mb-2">
             <div class="card-body">
                 <h5 class="card-title"><a href="{% url 'blog:detail' object.slug %}" class=" text-decoration-none text-reset">{{ object.title }}</a></h5>
-               
             </div>
         </div>
         {% endfor %}
