--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+<img src="{% static 'images/paper2.jpeg' %}" class="img-fluid" alt="Image">
 
 <div class="container">
     <div class="row align-items-center">
         <div class="col">
-            <h5>left col</h5>
         </div>
         <div class="col-6 text-center">
+            <h2 class="mb-4 mt-2">Newest posts:</h2>
         {% for object in object_list %}
         <div class="card mt-2 mb-2">
             <div class="card-body">
@@ -16,7 +18,6 @@
         {% endfor %}
         </div>
         <div class="col">
-        <h5>right col</h5>
         </div>
     </div>
 </div>
