--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
                 </div>
                 <div class="navbar-nav ms-auto">
                     {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
                     <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                     {% else %}
                     <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
