--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -13,6 +13,8 @@
         <div class="card mt-2 mb-2">
             <div class="card-body">
                 <h5 class="card-title"><a href="{% url 'blog:detail' object.slug %}" class=" text-decoration-none text-reset">{{ object.title }}</a></h5>
+                <p class="card-text">
+                </p>
             </div>
         </div>
         {% endfor %}
