--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -8,14 +8,19 @@
             {% if not request.user.is_authenticated %}
             <form method="POST">
                 {% csrf_token %}
+                {{ form.non_field_errors }}
+                
+                {{ form.username.errors }}
                 <label class="form-label" for="id_username">Username:</label>
                 <input class="form-control mb-2" type="text" name="username" maxlength="150" autocapitalize="none"
                     autocomplete="username" autofocus required id="id_username">
 
+                {{ form.password.errors }}
                 <label class="form-label" for="id_password1">Password:</label>
                 <input class="form-control mb-2" type="password" name="password1" autocomplete="new-password" required
-                    id="id_password1">
-
+                id="id_password1">
+                
+                {{ form.password2.errors }}
                 <label class="form-label" for="id_password2">Password confirmation:</label>
                 <input class="form-control mb-2" type="password" name="password2" autocomplete="new-password" required
                     id="id_password2">
