--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,10 +8,14 @@
             {% if not request.user.is_authenticated %}
             <form method="POST">
                 {% csrf_token %}
+                {{ form.non_field_errors }}
+                
+                {{ form.username.errors }}
                 <label class="form-label" for="id_username">Username:</label>
                 <input class="form-control mb-2" type="text" name="username" autofocus autocapitalize="none"
-                    autocomplete="username" maxlength="150" required id="id_username">
-
+                autocomplete="username" maxlength="150" required id="id_username">
+                
+                {{ form.password.errors }}
                 <label class="form-label" for="id_password">Password:</label>
                 <input class="form-control mb-2" type="password" name="password" autocomplete="current-password" required
                     id="id_password">
