--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Logout
+{% endblock title %}
 {% block content %}
 <div class="container">
     <div class="row align-items-center">
