--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
+{% block title %}
+Profile
+{% endblock title %}
 {% block content %}
-
-
-
 <div class="container">
     <div class="row">
         <div class="col">
