--- a/templates/blog/delete.html
+++ b/templates/blog/delete.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Delete post
+{% endblock title %}
 {% block content %}
 <div class="row align-items-center">
     <div class="col">
