--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
+{% block title %}
+{{ post.title }}
+{% endblock title %}
 {% block content %}
 <div class="container">
     <h2 class="text-center mt-5">{{ post.title }}</h2>
-    <h4 class="mb-1">by {{ post.author }}</h4>
-    <h5>{{ post.pub_date }}</h5>
+    <p class="text-center mb-1">by {{ post.author }}</p>
+    <p class="text-center mb-5">{{ post.pub_date }}</p>
+    <p><b>{{ post.summary }}</b></p>
     <p class="mt-4 mb-4">{{ post.content|safe }}</p>
     {% if request.user.is_authenticated %}
         <a href="{% url 'blog:update' post.slug %}" class="btn btn-primary btn-sm mb-1">Edit</a>
